# Assignment_2

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/: gl_helper.h  gl_helper.hpp  platform.h  platform.hpp
include/euclidean2/: vecd.hpp  vertex.hpp
include/euclidean2/camera/: camera.hpp
include/euclidean2/math/: angle.hpp  e_math.hpp  e_numeric.hpp  vec2.hpp  vec3.hpp
include/euclidean2/object/: boat.hpp  cannon.hpp  projectile.hpp  water.hpp
include/euclidean2/system/: engine.h  engine.hpp  light.hpp  material.hpp  skybox.hpp  text.hpp  texture.hpp  window.h  window.hpp
res/: sand.tga  test.tga
source/: CMakeLists.txt
source/euclidean2/: main.c  main.cpp
source/euclidean2/camera/: camera.cpp
source/euclidean2/math/: e_math.cpp  vec2.cpp  vec3.cpp
source/euclidean2/object/: boat.cpp  cannon.cpp  projectile.cpp  water.cpp
source/euclidean2/system/: engine.c  engine.cpp  light.cpp  material.cpp  skybox.cpp  text.cpp  texture.cpp  window.c  window.cpp
